k8s/footy-chart/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: footy
spec:
  ingressClassName: nginx
  rules:
    - host: footy.newyeti.us.to
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /bak
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8000
